# vpn

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Justfile  LICENSE  README.md  SECURITY.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  release.yml
_bmad/: config.toml  config.user.toml
_bmad-output/implementation-artifacts/: 1-1-init-workspace-and-frontend.md  deferred-work.md  spec-client-detailed-logs.md  spec-client-server-version-display.md  spec-desktop-client-operability.md  spec-server-managed-peer-routes.md  spec-show-current-user-in-desktop-gui.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-05-22.md  prd.md  ux-design-specification.md
_bmad-output/planning-artifacts/research/: technical-rust-vpn-architecture-patterns-research-2026-05-11.md  technical-rust-vpn-control-plane-api-research-2026-05-11.md  technical-rust-vpn-implementation-strategy-research-2026-05-11.md  technical-rust-vpn-openvpn-architecture-research-2026-05-11.md  technical-rust-vpn-openvpn-research-2026-05-11.md  technical-rust-vpn-risk-assessment-research-2026-05-11.md  technical-rust-vpn-security-integration-research-2026-05-11.md  technical-vpn-protocol-architecture-research-2026-05-11.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
crates/vpn-api-types/: Cargo.toml
crates/vpn-api-types/src/: api_key.rs  audit.rs  auth.rs  envelope.rs  error_codes.rs  group.rs  lib.rs  peer.rs  subnet.rs  system.rs  user.rs
crates/vpn-cli/: Cargo.toml
crates/vpn-cli/src/: api.rs  cli.rs  config.rs  daemon.rs  error.rs  ipc.rs  lib.rs  main.rs  netmon.rs  reconnect.rs  wg_userspace.rs
crates/vpn-cli/tests/: api_client.rs  ipc_socket.rs
crates/vpn-core/: Cargo.toml
crates/vpn-core/src/: error.rs  lib.rs  repository.rs  service.rs  time.rs
crates/vpn-platform/: Cargo.toml
crates/vpn-platform/src/: credential.rs  daemon.rs  error.rs  lib.rs  tun.rs
crates/vpn-server/: Cargo.toml
crates/vpn-server/src/: app.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  shutdown.rs  startup.rs  state.rs  tls.rs
crates/vpn-server/src/auth/: extractor.rs  mod.rs
crates/vpn-server/src/handlers/: api_keys.rs  audit.rs  auth.rs  backup.rs  groups.rs  health.rs  openapi.rs  peers.rs  static_files.rs  subnets.rs  system.rs  users.rs
crates/vpn-server/src/middleware/: audit.rs  auth.rs  https_redirect.rs  mod.rs
crates/vpn-server/src/ratelimit/: login.rs  mod.rs
crates/vpn-server/src/repositories/: api_key_repo_sqlite.rs  audit_log_repo_sqlite.rs  domain_event_repo_sqlite.rs  mod.rs  notification_event_repo_sqlite.rs  peer_event_repo_sqlite.rs  peer_repo_sqlite.rs  session_repo_sqlite.rs  subnet_repo_sqlite.rs  system_config_repo_sqlite.rs  user_group_repo_sqlite.rs  user_repo_sqlite.rs
crates/vpn-server/src/services/: api_key_service.rs  audit_service.rs  auth_service.rs  config_service.rs  domain_event_service.rs  mod.rs  notification_channels.rs  notification_service.rs  password_hasher.rs  peer_service.rs  subnet_service.rs  token_issuer.rs  user_group_service.rs  user_service.rs
crates/vpn-server/tests/: audit_admin_flow.rs  auth_flow.rs  peer_flow.rs  users_admin_flow.rs
crates/vpn-wireguard/: Cargo.toml
crates/vpn-wireguard/src/: config.rs  control.rs  ip_pool.rs  kernel.rs  keys.rs  lib.rs
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/scripts/: fetch-wintun.ps1
desktop/src/: App.tsx  api.ts  format.ts  main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json  windows-app-manifest.xml
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/resources/: .gitignore  README.md
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  manager.rs  observability.rs
docker/: Dockerfile  Dockerfile.client  Dockerfile.deploy  Dockerfile.local  docker-compose.yml  entrypoint.sh
docs/: REAL-HARDWARE-CHECKLIST.md  admin-guide.md  architecture-evolution.md  architecture.md  client.md  configuration.md  deployment.md  external-api.md  notifications.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/components/: AssignGroupModal.tsx  CidrRoutesSelect.tsx  CreateUserModal.tsx  EditGroupModal.tsx  EditPeerRoutesModal.tsx  EditServerRoutesModal.tsx  EmptyStateWithAction.tsx  EventNotifications.tsx  NodeStatusDot.tsx  PeerHealthSection.tsx  PlaceholderPage.tsx  RequireAuth.tsx  ResetPasswordModal.tsx  SetMaxDevicesModal.tsx  SetupGate.tsx  ShareLinkModal.tsx
frontend/src/hooks/: useCopyToClipboard.ts  useSubnetOptions.ts
frontend/src/pages/: AccountSettingsPage.tsx  ApiKeysPage.tsx  AuditLogsPage.tsx  BackupPage.tsx  ConnectionGuidePage.tsx  DashboardPage.tsx  GroupsPage.tsx  LoginPage.tsx  NotificationSettingsPage.tsx  PeersPage.tsx  SetupWizardPage.tsx  SubnetsPage.tsx  UsersPage.tsx
frontend/src/services/: apiKeys.ts  audit.ts  auth.ts  backup.ts  groups.ts  http.ts  peers.ts  subnets.ts  users.ts
frontend/src/stores/: authStore.ts  uiStore.ts
migrations/: 20260511_120000_init.sql  20260522120100_users.sql  20260522120200_sessions.sql  20260522120300_peers.sql  20260522120400_system_config.sql  20260522120500_audit_logs.sql  20260522120600_peers_force_removed.sql  20260522120700_peer_routed_subnets.sql  20260526120000_user_groups.sql  20260526130000_user_group_members.sql  20260526140000_subnets.sql  20260629120000_user_group_members_cleanup.sql  20260702120000_users_max_devices.sql  20260702130000_peer_health.sql  20260703100000_api_keys.sql  20260703110000_notification_events.sql  20260703120000_domain_events.sql
packaging/: README.md
packaging/linux/: nfpm.yaml  vpn-server.env.example
packaging/macos/: build-pkg.sh  com.vpn-cli.daemon.plist  com.xeflow.vpn.cli.daemon.plist
packaging/windows/: build-installer.ps1  vpn-cli.iss
(+11 files in other folders)
