[workspace]
resolver = "2"
members = [
    "crates/vpn-api-types",
    "crates/vpn-core",
    "crates/vpn-wireguard",
    "crates/vpn-platform",
    "crates/vpn-server",
    "crates/vpn-cli",
]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["Shangguanjunjie"]
repository = "https://github.com/Shangguanjunjie/vpn"
rust-version = "1.90"

[workspace.dependencies]
# === 异步运行时 ===
tokio = { version = "1.52", features = ["full"] }

# === Web 框架 ===
axum = { version = "0.8", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id", "util", "cors", "fs"] }
mime_guess = "2"
rust-embed = "8"

# === TLS / ACME ===
rustls = "0.23"
rustls-acme = { version = "0.15", features = ["axum"] }
tokio-rustls = "0.26"

# === 内部 crate ===
vpn-api-types = { path = "crates/vpn-api-types" }
vpn-core = { path = "crates/vpn-core" }
vpn-wireguard = { path = "crates/vpn-wireguard" }
vpn-platform = { path = "crates/vpn-platform" }

# === 序列化 ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# === 错误处理 ===
anyhow = "1.0"
thiserror = "2.0"

# === 日志 ===
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# === 时间与 ID ===
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
uuid = { version = "1", features = ["v7", "serde"] }

# === 异步辅助 ===
async-trait = "0.1"
futures = "0.3"

# === 数据库 ===
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "macros",
    "sqlite",
    "migrate",
    "chrono",
    "uuid",
] }

# === 认证与加密 ===
argon2 = "0.5"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = "0.8"
rsa = { version = "0.9", features = ["pem"] }
tower_governor = "0.8"
validator = { version = "0.20", features = ["derive"] }
zeroize = "1"
sha2 = "0.10"

# === WireGuard 数据平面 ===
boringtun = "0.6"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ipnet = "2"
base64 = "0.22"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }

# === HTTP 客户端（vpn-cli 用） ===
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
