[package]
name = "vpn-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
vpn-api-types = { workspace = true }
vpn-core = { workspace = true }
vpn-wireguard = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
rustls = { workspace = true }
rustls-acme = { workspace = true }
tokio-rustls = { workspace = true }
futures = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true }
tower_governor = { workspace = true }
validator = { workspace = true }
zeroize = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
ipnet = { workspace = true }

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"
