[package]
name = "vpn-wireguard"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
vpn-core = { workspace = true }
x25519-dalek = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
ipnet = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
